applications/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"jellyfin","namespace":"jellyfin"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"jellyfin"}},"template":{"metadata":{"labels":{"app":"jellyfin"}},"spec":{"containers":[{"env":[{"name":"TZ","value":"Europe/Helsinki"}],"image":"jellyfin/jellyfin:latest","name":"jellyfin","ports":[{"containerPort":8096,"name":"http"}],"resources":{"limits":{"cpu":"2000m","memory":"2Gi"},"requests":{"cpu":"500m","memory":" [...]
  creationTimestamp: "2025-11-26T14:40:10Z"
  generation: 2
  name: jellyfin
  namespace: jellyfin
  resourceVersion: "545388"
  uid: 7ab9f235-3f84-4c28-9bb7-b9dbf864013a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jellyfin
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Helsinki
        image: jellyfin/jellyfin:latest
        imagePullPolicy: Always
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /media
          name: media
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: k3s-worker1
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-11-26T14:40:40Z"
    lastUpdateTime: "2025-11-26T14:40:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-11-26T14:40:10Z"
    lastUpdateTime: "2025-11-26T17:15:40Z"
    message: ReplicaSet "jellyfin-8564fb758d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
